--- a/config.yml
+++ b/config.yml
@@ -4,11 +4,9 @@ superuser:
   login: elle
   password: 12345
 database:
-  host: 127.0.0.1
-  port: 5432
+  host: db
   user: elle_dev
   password: dev_elle_pass
   database: dev_osu
 redis:
-  host: localhost
-  port: 6379
+  host: redis
