--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,29 @@
 version: "3.9"
 services:
-  postgres:
-    image: postgres:latest
-    environment:
-      POSTGRES_DB: "dev_osu"
-      POSTGRES_USER: "elle_dev"
-      POSTGRES_PASSWORD: "dev_elle_pass"
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: osusettings
     ports:
-      - "5432:5432"
+      - 8080:8080
+    depends_on:
+      - db
+
+  db:
+    image: postgres:latest
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    environment:
+      POSTGRES_DB: dev_osu
+      POSTGRES_USER: elle_dev
+      POSTGRES_PASSWORD: dev_elle_pass
+    ports:
+      - 5050:5432
   redis:
     image: redis:latest
     ports:
-      - "6379:6379"
+      - 6379:6379
+
+volumes:
+  pgdata:
