--- a/config.yml
+++ b/config.yml
@@ -10,3 +10,8 @@ database:
   database: dev_osu
 redis:
   host: redis
+credentials:
+  client_id: ""
+  client_secret: ""
+  grant_type: "client_credentials"
+  scope: "public"
