--- a/config.yml
+++ b/config.yml
@@ -11,7 +11,8 @@ database:
 redis:
   host: redis
 credentials:
-  client_id: ""
-  client_secret: ""
+  client_id: "15033"
+  client_secret: "dSbJw0V5RWbl3rBlOksmtNGHFPsz0PJDHlREOPPS"
   grant_type: "client_credentials"
   scope: "public"
+  server_name: "http://localhost:80"
