--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: osusettings
-    #ports:
-      #- 8080:8080
+    ports:
+      - 8080:8080
     depends_on:
       - db
       - redis
