--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
-CLIENT_ID:
-CLIENT_SECRET:
-SERVER_NAME:
+CLIENT_ID=
+CLIENT_SECRET=
+SERVER_NAME=http://localhost:8080
 
-POSTGRES_USER:
-POSTGRES_PASSWORD:
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+
+SUPERUSER_NAME=admin
+SUPERUSER_PASSWORD=admin
