--- a/server.conf
+++ b/server.conf
@@ -8,7 +8,7 @@ http{
             proxy_pass http://app:8080;
         }
 
-        location /static/ {
+        location /public/ {
             root /data/;
         }
     }
